[gd_scene load_steps=13 format=3 uid="uid://buchh3yymht83"]

[ext_resource type="Script" path="res://scripts/spells_tab.gd" id="1_eh1wt"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ekcdt"]
bg_color = Color(0.0901961, 0.0901961, 0.0901961, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3djh8"]
bg_color = Color(0.0901961, 0.0901961, 0.0901961, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k86xg"]
bg_color = Color(0.0901961, 0.0901961, 0.0901961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oaxbx"]
bg_color = Color(0.0901961, 0.0901961, 0.0901961, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6vv7n"]
bg_color = Color(0.0901961, 0.0901961, 0.0901961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6rki0"]
bg_color = Color(0.0901961, 0.0901961, 0.0901961, 1)
border_width_right = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_562ri"]
bg_color = Color(0.0901961, 0.0901961, 0.0901961, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ki1vg"]
bg_color = Color(0.0509804, 0.0509804, 0.0509804, 1)

[sub_resource type="InputEventKey" id="InputEventKey_3wlpx"]
device = -1
keycode = 73
unicode = 105

[sub_resource type="InputEventKey" id="InputEventKey_vn68y"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_pemwp"]
events = [SubResource("InputEventKey_3wlpx"), SubResource("InputEventKey_vn68y")]

[node name="SpellsTab" type="PanelContainer"]
offset_right = 1915.0
offset_bottom = 1072.0
script = ExtResource("1_eh1wt")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Columns" type="HBoxContainer" parent="Margin"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Margin/Columns"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_ekcdt")

[node name="MarginContainer" type="MarginContainer" parent="Margin/Columns/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="SpellList" type="VBoxContainer" parent="Margin/Columns/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Margin/Columns/PanelContainer/MarginContainer/SpellList"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="SpellSlots" type="VBoxContainer" parent="Margin/Columns/PanelContainer/MarginContainer/SpellList/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="Spell" type="Label" parent="Margin/Columns/PanelContainer/MarginContainer/SpellList/ScrollContainer/SpellSlots"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Magia
"

[node name="Buttons" type="HBoxContainer" parent="Margin/Columns/PanelContainer/MarginContainer/SpellList"]
layout_mode = 2
size_flags_vertical = 8

[node name="BackButton" type="Button" parent="Margin/Columns/PanelContainer/MarginContainer/SpellList/Buttons"]
custom_minimum_size = Vector2(200, 75)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
focus_mode = 0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_3djh8")
text = "Voltar"

[node name="UseButton" type="Button" parent="Margin/Columns/PanelContainer/MarginContainer/SpellList/Buttons"]
visible = false
custom_minimum_size = Vector2(200, 75)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
focus_mode = 0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_3djh8")
text = "Usar
"

[node name="Other" type="PanelContainer" parent="Margin/Columns"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_k86xg")

[node name="Right" type="VBoxContainer" parent="Margin/Columns/Other"]
layout_mode = 2

[node name="Spell" type="PanelContainer" parent="Margin/Columns/Other/Right"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_oaxbx")

[node name="MarginContainer" type="MarginContainer" parent="Margin/Columns/Other/Right/Spell"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 55
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Margin/Columns/Other/Right/Spell/MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Margin/Columns/Other/Right/Spell/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6vv7n")

[node name="MarginContainer" type="MarginContainer" parent="Margin/Columns/Other/Right/Spell/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="Name" type="Label" parent="Margin/Columns/Other/Right/Spell/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Magia"

[node name="PanelContainer3" type="PanelContainer" parent="Margin/Columns/Other/Right/Spell/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6vv7n")

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/Columns/Other/Right/Spell/MarginContainer/VBoxContainer/PanelContainer3"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Margin/Columns/Other/Right/Spell/MarginContainer/VBoxContainer/PanelContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_6rki0")

[node name="PanelContainer2" type="PanelContainer" parent="Margin/Columns/Other/Right/Spell/MarginContainer/VBoxContainer/PanelContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="Margin/Columns/Other/Right/Spell/MarginContainer/VBoxContainer/PanelContainer3"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="Margin/Columns/Other/Right/Spell/MarginContainer/VBoxContainer/PanelContainer3/MarginContainer"]
layout_mode = 2

[node name="MPCost" type="Label" parent="Margin/Columns/Other/Right/Spell/MarginContainer/VBoxContainer/PanelContainer3/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 30
text = "MP"

[node name="Damage" type="Label" parent="Margin/Columns/Other/Right/Spell/MarginContainer/VBoxContainer/PanelContainer3/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Dano"

[node name="PanelContainer2" type="PanelContainer" parent="Margin/Columns/Other/Right/Spell/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_6vv7n")

[node name="MarginContainer" type="MarginContainer" parent="Margin/Columns/Other/Right/Spell/MarginContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Description" type="RichTextLabel" parent="Margin/Columns/Other/Right/Spell/MarginContainer/VBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 30
text = "This is the description of the spell!"

[node name="ExitButton" type="Button" parent="Margin"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
focus_mode = 0
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_562ri")
theme_override_styles/hover = SubResource("StyleBoxFlat_ki1vg")
shortcut = SubResource("Shortcut_pemwp")
text = "X"

[connection signal="pressed" from="Margin/Columns/PanelContainer/MarginContainer/SpellList/Buttons/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Margin/Columns/PanelContainer/MarginContainer/SpellList/Buttons/UseButton" to="." method="_on_use_button_pressed"]
[connection signal="pressed" from="Margin/ExitButton" to="." method="_on_exit_button_pressed"]
